Jesper - revisit infoForm

--- a/ZooBazaar_Solution/ZooBazaar_Windows_Forms_Application/Properties/Resources.resx
+++ b/ZooBazaar_Solution/ZooBazaar_Windows_Forms_Application/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="EmployeesIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\EmployeesIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="InfoIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\InfoIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ScheduleIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\ScheduleIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
